# PrettyGoodAIVoiceBot

./: .env.example  Makefile  README.md  pyproject.toml
artifacts/reports/: bug_report.md
artifacts/transcripts/: appointment_basic-CAbb38c9075b3d9806fccb4c8e03375298.txt  appointment_weekend-CA8ea37d1daeb36514622cba5dd34604c9.txt  barge_in-CA88128fa3a6f41d6d1781c3a7ef6d7867.txt  cancel-CA7378f13c25b7a2a9cde5dd608c73559e.txt  insurance-CAc03407c9ee06ffd67cec733069fc4cce.txt  office_hours-CAaf8217d4aa6fef418a0120e5610f3f92.txt  refill_standard-CA042bcf615b5a3de038ed04265d5afda4.txt  refill_urgent-CA36e06e62657c2e2fbfd4d1492b208e9c.txt  reschedule-CA58c35223390a28a846b27ac621c78568.txt  unclear_symptoms-CA5134e557d3a9a741250c2fede984dfea.txt
docs/: architecture.md  bug_report.md
src/pgai_voice_bot/: __init__.py  analyze.py  artifacts.py  calls.py  cli.py  config.py  recordings.py  scenarios.py  server.py
