[project]
name = "pgai-voice-bot"
version = "0.1.0"
description = "Automated patient voice bot for the Pretty Good AI engineering challenge"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "twilio>=9.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
pgai-bot = "pgai_voice_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgai_voice_bot"]
